tests/ui/pattern/usefulness/issue-2111.stderr
error[E0004]: match is non-exhaustive
  --> $DIR/issue-2111.rs:2:11
   |
LL |     match (a, b) {
   |           ^^^^^^ patterns `(None, None)` and `(Some(_), Some(_))` not covered
   |
   = note: the matched value is of type `(Option<usize>, Option<usize>)`
help: ensure that all possible cases are being handled by adding more match arms
   |
LL ~         (Some(_), None) | (None, Some(_)) => {}
LL +         (None, None) => { todo!() }
LL +         (Some(_), Some(_)) => { todo!() }
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0004`.
